030-software/fluxcd/apps/redisinsight/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redisinsight
  annotations:
    dashboard.${domain}/name: redisinsight
    dashboard.${domain}/url: https://redisinsight.${domain}
    dashboard.${domain}/icon: database
spec:
  hostnames:
  - redisinsight.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: redisinsight
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
